--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-masonry-component": "^6.3.0"
+  },
+  "devDependencies": {
+    "standard": "16.0.4"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
